--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,37 @@
-remote_theme: pages-themes/cayman@v0.2.0
+# Site settings
+title: Sample Documentation
+description: Documentation samples created by me.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "https://yourdomain.com" # the base hostname & protocol for your site
+
+# Build settings
+markdown: kramdown
+theme: just-the-docs
+
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one.
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+
+# Search settings
+plugins:
+  - jekyll-remote-theme
+  - jekyll-jtd-search
+remote_theme: pmarsceill/just-the-docs # Remote theme for Just the Docs
+
+# Table of Contents (TOC) settings
+plugins:
+  - jekyll-jtd-toc
+
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - .sass-cache/
+  - .jekyll-cache/
+  - .jekyll-metadata
