--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Sample Documentation
 description: Documentation samples created by me
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "https://manojmandya07.github.io/Technical-documentation-Samples/" # the subpath of your site, e.g. /blog/
 url: "https://manojmandya07.github.io/Technical-documentation-Samples/" # the base hostname & protocol for your site
 
 # Build settings
@@ -12,11 +12,6 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-feed
-
-# Search settings
-plugins:
-  - jekyll-remote-theme
-  - jekyll-jtd-search
 
 # Table of Contents (TOC) settings
 plugins:
